Added iot route (for download page)

--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -4,6 +4,7 @@
     <a href="/" class="brand-logo"><i class="material-icons">cloud</i>YeurDreamin' IoT Workshop</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="/">MQTT Details</a></li>
+      <li><a href="/iot">Download</a></li>
       <li><a href="/send">Ping</a></li> 
     </ul>
   </div>
