--- a/views/iot.html
+++ b/views/iot.html
@@ -1,7 +1,48 @@
-<ul class="collection with-header">
-  <li class="collection-header"><h4>Download links for IoT Workshop</h4></li>
-  <li class="collection-item"><a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino IDE</a></li>
-  <li class="collection-item"><a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino Sketches</a></li>
-  <li class="collection-item">TBD</li>
-  <li class="collection-item">TBD</li>
+<style>
+    .center {
+      text-align: center;
+    }
+</style>
+<h4 class="center">Download links for IoT Workshop</h4>
+<ul class="collapsible popout">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Arduino IDE setup</div>
+    <div class="collapsible-body">
+      <span>
+        <ol id="ide">
+          <li>Goto <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino IDE downloads</a> page and install the approriate version.</li>
+          <li>If you don’t see the COM Port in your Arduino IDE, you need to install the <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers" target="_blank">ESP32 CP210x USB to UART Bridge VCP Drivers</a>. (Mac users, checkout <a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-mac-and-linux-instructions/" target="_blank">this</a> blog post for more detailed instructions.)</li>
+          <li></li>
+        </ol>
+      </span>
+    </div>
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="material-icons">place</i>Github</div>
+    <div class="collapsible-body">
+      <span>
+        <ol id="sketches">
+          <li>Goto this <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Github repo</a> and please download the sketches.</li>
+          <li>Please click the Deploy to Heroku button and install the Webapp</li>
+        </ol>
+      </span>
+    </div>
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="material-icons">whatshot</i>Mangaged Package</div>
+    <div class="collapsible-body">
+      <span>
+        <ol id="mangedpack">
+          <li>If you haven't done the IoT trailmix already, I highly recommend doimg it before this workshop. We will be using some off the assets / fields created in the trailmix. Please <a href="" target="_blank">download</a> and install the managed package.</li>
+        </ol>
+      </span>
+    </div>
+  </li>
 </ul>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.collapsible');
+    var instances = M.Collapsible.init(elems, {});
+  });
+</script>
