More changes to the download page

--- a/views/iot.html
+++ b/views/iot.html
@@ -3,37 +3,49 @@
       text-align: center;
     }
 </style>
-<h4 class="center">Download links for IoT Workshop</h4>
+<h4 class="center">Download links & setup instructions for IoT Workshop</h4>
 <ul class="collapsible popout">
   <li>
-    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Arduino IDE setup</div>
+    <div class="collapsible-header"><i class="material-icons">laptop</i>Arduino IDE setup</div>
     <div class="collapsible-body">
       <span>
         <ol id="ide">
           <li>Goto <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino IDE downloads</a> page and install the approriate version.</li>
-          <li>If you don’t see the COM Port in your Arduino IDE, you need to install the <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers" target="_blank">ESP32 CP210x USB to UART Bridge VCP Drivers</a>. (Mac users, checkout <a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-mac-and-linux-instructions/" target="_blank">this</a> blog post for more detailed instructions.)</li>
-          <li></li>
+          <li>In order to connect to our ESP32 module via USB port, we need extra drivers / boards. Check out the following blog articles for respective OS'<div class=""></div>
+            <ol type="a" start="a">
+              <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-mac-and-linux-instructions/" target="_blank">Mac / Linux</a> users. (Note: You many need to install <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers" target="_blank">ESP32 CP210x USB to UART Bridge VCP Drivers</a>. It's mentioned in the blog but can be easily overlooked hence writing here.)</li></li>
+              <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-windows-instructions/" target="_blank">Windows</a></li>
+            </ol>
+          <li>We would need to install additional libraries in order for our code to execute properly. Checkout <a href="https://www.arduino.cc/en/Guide/Libraries" target="_blank">this link</a> to learn more about it. Please download and install the following libraries. </li>
+            <ol type="a" start="a">
+              <li>PubSub Client</li>
+              <li>PubSub Client tools</li>
+              <li>Arduino Json</li>
+            </ol>
         </ol>
+        
       </span>
     </div>
   </li>
   <li>
-    <div class="collapsible-header"><i class="material-icons">place</i>Github</div>
+    <div class="collapsible-header"><i class="material-icons">code</i>Sample Code</div>
     <div class="collapsible-body">
       <span>
         <ol id="sketches">
-          <li>Goto this <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Github repo</a> and please download the sketches.</li>
-          <li>Please click the Deploy to Heroku button and install the Webapp</li>
+          <li>Goto the <a href="https://www.arduino.cc/en/Main/Software" target="_blank">YD19-Sketches</a> repo and please download the sketches.</li>
+          <li>Please goto the <a href="https://github.com/ankittaneja/yd19-webapp" target="_blank">YD19-Webapp</a> repo & click the <a href="">
+            <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
+          </a> button in order to deploy the supporting webapp.</li>
         </ol>
       </span>
     </div>
   </li>
   <li>
-    <div class="collapsible-header"><i class="material-icons">whatshot</i>Mangaged Package</div>
+    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Mangaged Package</div>
     <div class="collapsible-body">
       <span>
         <ol id="mangedpack">
-          <li>If you haven't done the IoT trailmix already, I highly recommend doimg it before this workshop. We will be using some off the assets / fields created in the trailmix. Please <a href="" target="_blank">download</a> and install the managed package.</li>
+          <li>Please <a href="" target="_blank">download</a> and install the managed package.</li>
         </ol>
       </span>
     </div>
