Added new route to create scratch org

--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -6,6 +6,7 @@
       <li><a href="/">MQTT Details</a></li>
       <li><a href="/iot">Download</a></li>
       <li><a href="/send">Ping</a></li> 
+      <li><a href="/create">Create Scratch Org</a></li> 
     </ul>
   </div>
 </div>
