Added Scratch ord link

--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
   <div class="collapsible-body">
     <span>
       <ol id="managedpack">
-        <li>We need a Developer Edition org. Since Salesforce has disabled IoT cloud by default, we need a Scratch Org. You can download the ScractOrg definition file <a href="" target="_blank">here.</a></li>
+        <li>We need a Developer Edition org. Since Salesforce has disabled IoT cloud by default, we need a Scratch Org. You can download the ScractOrg definition file <a href="https://github.com/ankittaneja/yd19-sketches/blob/master/yd19-scratch-def.json" target="_blank">here.</a></li>
         <!-- <li>Please <a href="" target="_blank">download</a> and install the managed package. (NOTE: If you do the IoT trail in this Dev org you won't need to install the package)</li> -->
         <li>Please create a Connected App in the Scratch Org. We would need the client_id to register our device.</li>
       </ol>
