Added Github repo info

--- a/views/index.html
+++ b/views/index.html
@@ -44,10 +44,10 @@
     <span>
       <ol id="sketches">
         <li>Goto the <a href="https://github.com/ankittaneja/yd19-sketches" target="_blank">YD19-Sketches</a> repo and please download the sketches.</li>
-        <li>Please goto the <a href="https://github.com/ankittaneja/yd19-webapp" target="_blank">YD19-Webapp</a> repo & click the 
-          <a href="">
+        <li>Please click the 
+          <a href="https://heroku.com/deploy?template=https://github.com/ankittaneja/yd19-webapp">
             <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
-          </a> button in order to deploy the supporting webapp.</li>
+          </a> button in order to deploy a copy of this supporting webapp. It starts a cloudMQtt server for you. Alternatively, you can also fork <a href="https://github.com/ankittaneja/yd19-webapp" target="_blank">this repo</a> and do it yourself.</li>
       </ol>
     </span>
   </div>
