--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -1,4 +1,5 @@
 <nav>
+  <a href="https://github.com/ankittaneja/yd19-webapp"><img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png?resize=149%2C149" class="attachment-full size-full right" alt="Fork me on GitHub" data-recalc-dims="1"></a>
   <div class="nav-wrapper">
       <div class="container">
     <a href="/" class="brand-logo"><i class="material-icons">cloud</i>YeurDreamin' IoT Workshop</a>
