Add the required block

--- a/views/index.html
+++ b/views/index.html
@@ -5,33 +5,54 @@
   }
 </style>
 <h4 class="center">Download links & setup instructions for IoT Workshop</h4>
+<br />
 <ul class="collapsible popout">
-<li>
-  <div class="collapsible-header"><i class="material-icons">laptop</i>Arduino IDE setup</div>
-  <div class="collapsible-body">
-    <span>
-      <ol id="ide">
-        <li>Goto <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino IDE downloads</a> page and install the approriate version.</li>
-        <li>In order to connect to our ESP32 module via USB port, we need extra drivers / boards. Check out the following blog articles for respective OS'<div class=""></div>
-          <ol type="a" start="a">
-            <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-mac-and-linux-instructions/" target="_blank">Mac / Linux</a> users. (Note: You many need to install <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers" target="_blank">ESP32 CP210x USB to UART Bridge VCP Drivers</a>. It's mentioned in the blog but can be easily overlooked hence writing here.)</li></li>
-            <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-windows-instructions/" target="_blank">Windows</a></li>
-          </ol>
-        <li>We would need to install additional libraries in order for our code to execute properly. Checkout <a href="https://www.arduino.cc/en/Guide/Libraries" target="_blank">this link</a> to learn more about it. Please download and install the following libraries. </li>
-          <ol type="a" start="a">
-            <li>PubSub Client</li>
-            <li>Arduino Json</li>
-          </ol>
-      </ol>
-    </span>
-  </div>
-</li>
-<li>
+  <li class="active">
+      <div class="collapsible-header"><i class="material-icons">info_outline</i>Requirements</div>
+      <div class="collapsible-body">
+        <span>In order for this workshop to be successful, we need the following things and few setup configurations.</span><br /><br />
+        
+        <ol id="requireList">
+          <li>Arduino IDE installed and configured to connect devices with USB</li>
+          <li>Connected Developer Edition Salesforce Org</li>
+          <li>A Heroku App with MQTT server as we need it communicate with the ESP32 module.</li>
+            <!-- <li>Developer Edition Org with <strong>DevHub enabled</strong>. If possible, create a ScratchOrg with the definition file provided here.</li> -->
+            <!-- <li>A Heroku account with space for atleast 1 free app. We need an MQTT server to communicate with the ESP32 module. Luckily, Heroku provides one for free. You can deploy an exact version of this very web app using <a href="https://heroku.com/deploy?template=https://github.com/ankittaneja/yd19-webapp">
+              <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
+            </a> button. Everything is pre-confugured.</li>
+          -->
+        </ol>
+        <br />      
+        Please go through each tab as it has detailed  information on setup. If you face any problem, don't hesitate to contact me.  
+        <a href="https://twitter.com/intent/tweet?screen_name=NktTaneja&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @NktTanjea</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>  
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="material-icons">laptop</i>Arduino IDE setup</div>
+    <div class="collapsible-body">
+      <span>
+        <ol id="ide">
+          <li>Goto <a href="https://www.arduino.cc/en/Main/Software" target="_blank">Arduino IDE downloads</a> page and install the approriate version.</li>
+          <li>In order to connect to our ESP32 module via USB port, we need extra drivers / boards. Check out the following blog articles for respective OS'<div class=""></div>
+            <ol type="a" start="a">
+              <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-mac-and-linux-instructions/" target="_blank">Mac / Linux</a> users. (Note: You many need to install <a href="https://www.silabs.com/products/development-tools/software/usb-to-uart-bridge-vcp-drivers" target="_blank">ESP32 CP210x USB to UART Bridge VCP Drivers</a>. It's mentioned in the blog but can be easily overlooked hence writing here.)</li></li>
+              <li><a href="https://randomnerdtutorials.com/installing-the-esp32-board-in-arduino-ide-windows-instructions/" target="_blank">Windows</a></li>
+            </ol>
+          <li>We would need to install additional libraries in order for our code to execute properly. Checkout <a href="https://www.arduino.cc/en/Guide/Libraries" target="_blank">this link</a> to learn more about it. Please download and install the following libraries. </li>
+            <ol type="a" start="a">
+              <li>PubSub Client</li>
+              <li>Arduino Json</li>
+            </ol>
+        </ol>
+      </span>
+    </div>
+  </li>
+  <li>
   <div class="collapsible-header"><i class="material-icons">filter_drama</i>Salesforce setup</div>
   <div class="collapsible-body">
     <span>
       <ol id="managedpack">
-        <li>We need a Developer Edition org. Since Salesforce has disabled IoT cloud by default, we need a Scratch Org. You can download the ScractOrg definition file <a href="https://github.com/ankittaneja/yd19-sketches/blob/master/yd19-scratch-def.json" target="_blank">here.</a></li>
+        <li>We need a Developer Edition org with <strong>DevHub enabled</strong>. Since Salesforce has disabled IoT cloud by default, we need a Scratch Org. You can download the ScractOrg definition file <a href="https://github.com/ankittaneja/yd19-sketches/blob/master/yd19-scratch-def.json" target="_blank">here.</a></li>
         <!-- <li>Please <a href="" target="_blank">download</a> and install the managed package. (NOTE: If you do the IoT trail in this Dev org you won't need to install the package)</li> -->
         <li>Please create a Connected App in the Scratch Org. We would need the client_id to register our device.</li>
       </ol>
@@ -39,15 +60,15 @@
   </div>
 </li>  
 <li>
-  <div class="collapsible-header"><i class="material-icons">code</i>Sample Code</div>
+  <div class="collapsible-header"><i class="material-icons">code</i>Heroku App + Sample Code</div>
   <div class="collapsible-body">
     <span>
       <ol id="sketches">
-        <li>Goto the <a href="https://github.com/ankittaneja/yd19-sketches" target="_blank">YD19-Sketches</a> repo and please download the sketches.</li>
         <li>Please click the 
           <a href="https://heroku.com/deploy?template=https://github.com/ankittaneja/yd19-webapp">
             <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
           </a> button in order to deploy a copy of this supporting webapp. It starts a cloudMQtt server for you. Alternatively, you can also fork <a href="https://github.com/ankittaneja/yd19-webapp" target="_blank">this repo</a> and do it yourself.</li>
+          <li>Goto the <a href="https://github.com/ankittaneja/yd19-sketches" target="_blank">YD19-Sketches</a> repo and please download the sketches.</li>  
       </ol>
     </span>
   </div>
