USB Cable info added

--- a/views/index.html
+++ b/views/index.html
@@ -19,11 +19,7 @@
           <li>Arduino IDE installed and configured to connect devices with USB</li>
           <li>Developer Edition Salesforce Org</li>
           <li>A Heroku App with MQTT server as we need it communicate with the ESP32 module.</li>
-            <!-- <li>Developer Edition Org with <strong>DevHub enabled</strong>. If possible, create a ScratchOrg with the definition file provided here.</li> -->
-            <!-- <li>A Heroku account with space for atleast 1 free app. We need an MQTT server to communicate with the ESP32 module. Luckily, Heroku provides one for free. You can deploy an exact version of this very web app using <a href="https://heroku.com/deploy?template=https://github.com/ankittaneja/yd19-webapp">
-              <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
-            </a> button. Everything is pre-confugured.</li>
-          -->
+          <li>A Micro-USB 2.0 cable to connect to the module. (Any phone charging cable apart from iPhone)</li> 
         </ol>
         <br />      
         Please go through each tab as it has detailed  information on setup. If you face any problem, don't hesitate to contact me.  
