Add Workshop section

--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -5,9 +5,9 @@
     <a href="/" class="brand-logo"><i class="material-icons">cloud</i>YeurDreamin' IoT Workshop</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="/">Download</a></li>
+      <li><a href="/workshop">Workshop</a></li>
       <li><a href="/mqtt">MQTT Details</a></li>
       <li><a href="/send">Ping</a></li> 
-      <!-- <li><a href="/create">Create Scratch Org</a></li>  -->
     </ul>
   </div>
 </div>
